# ai-dreamer-esp32-s3_matrix

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  button_manager.c  button_manager.h  captive_portal.c  captive_portal.h  led_matrix.h  llm.c  llm.h  main.c  motion_sensor.c  motion_sensor.h  wifi_manager.c  wifi_manager.h  ws_matrix.c  ws_matrix.h
